fix(fetch): suppress JNI native access warnings on Java 22+
Added `//JAVA_OPTIONS --enable-native-access=ALL-UNNAMED` to allow the progress bar's JLine dependency to access native terminal features without triggering JVM warnings.